force-app/main/default/objects/ssot__Party__dlm/fields/ssot__CreditRating__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreditRating__c</fullName>
    <label>Credit Rating</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreditRating</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>