force-app/main/default/objects/ssot__Party__dlm/fields/ssot__CreditScoreNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreditScoreNumber__c</fullName>
    <label>Credit ScoreNumber</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreditScoreNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>