force-app/main/default/objects/ssot__Party__dlm/fields/ssot__LifetimeAssetValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__LifetimeAssetValueAmount__c</fullName>
    <label>Lifetime Asset Value Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LifetimeAssetValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>