force-app/main/default/objects/ssot__Party__dlm/fields/ssot__Party_IndividualId_map_Individual_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Party_IndividualId_map_Individual_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party_IndividualId_map_Individual_Id_N_1</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Party_IndividualId_map_Individual_Id_N_1</relationshipLabel>
    <relationshipName>Party_IndividualId_map_Individual_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>